fixed images references

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 									<h2 style="color: #EBEBEB">Resume</h2>
 									<hr class="small">
 
-									<a href="images/SeanMcHughResumeJanuary2017-1.jpg">
-										<img src="images/SeanMcHughResumeJanuary2017-1.jpg" class="img-responsive" id="resume" alt="Responsive image" style="margin: 0 auto">
+									<a href="images/resume.pdf">
+										<img src="images/resumePic.jpg" class="img-responsive" id="resume" alt="Responsive image" style="margin: 0 auto">
 									</a>
 								</div>
 
